# AspectIDE

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  AI_TOOLS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  package.json  pnpm-lock.yaml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/installer/windows/: aspect-installer.nsi  lux-installer.nsi
apps/desktop/src-tauri/src/: agent_browser.rs  ai_a2a.rs  ai_anthropic.rs  ai_chat_backend.rs  ai_checkpoint.rs  ai_compaction.rs  ai_context_sources.rs  ai_failure.rs  ai_goal_eval.rs  ai_jobs.rs  ai_luxide.rs  ai_permissions.rs  ai_prompt.rs  ai_related.rs  ai_semantic.rs  ai_session.rs  ai_session_title.rs  ai_shell_safety.rs  ai_tokens.rs  ai_tool_defs.rs  ai_tools.rs  ai_turn.rs  ai_vision.rs  ai_workspace.rs  code_graph.rs  database.rs  debug.rs  editor.rs  extensions.rs  file_intel.rs  fonts.rs  git.rs  lib.rs  lsp.rs  lsp_install.rs  main.rs  mcp.rs  media_intel.rs  memory.rs  research.rs  (+12 more)
apps/desktop/src-tauri/src/agent_browser/: operations.rs  process.rs  resolver.rs  types.rs  validate.rs  version.rs
apps/desktop/src-tauri/src/aspector/: anthropic.rs  gateway.rs  mod.rs  transport.rs
apps/desktop/src-tauri/src/files/: file_intel.rs  media_intel.rs  mod.rs
apps/desktop/src-tauri/src/network/: mcp.rs  mod.rs  research.rs  ssh.rs  web_fetch.rs
apps/desktop/src-tauri/src/platform/: agent_browser.rs  extensions.rs  mod.rs  runtimes.rs  skills.rs  test_health.rs
crates/aspect-agent-browser/: Cargo.toml
crates/aspect-agent-browser/src/: install.rs  invoke.rs  lib.rs  probes.rs  process.rs  read_image.rs  resolver.rs  status.rs  stream.rs  types.rs  validate.rs  version.rs
crates/aspect-agent-tools/: Cargo.toml
crates/aspect-agent-tools/src/: approval.rs  atomic_write.rs  console_decode.rs  diff_stats.rs  eol.rs  file_read.rs  glob_utils.rs  json_utils.rs  lib.rs  output_truncate.rs  process_kill.rs  secret_scan.rs  shell_command.rs  subagent.rs  symbol_utils.rs
crates/aspect-agent-tools/src/browser/: args.rs  mod.rs  screenshot.rs
crates/aspect-agent-tools/src/definitions/: agent.rs  browser.rs  context.rs  edit.rs  mod.rs  plan.rs  remote.rs  schema.rs  shell.rs
crates/aspect-agent-tools/src/patch/: apply.rs  mod.rs  prepare.rs  rollback.rs
crates/aspect-agent-tools/src/tool_names/: aliases.rs  mod.rs  normalize.rs  parallel.rs  rejection.rs  suggest.rs
crates/aspect-agent-tools/src/types/: file_patch.rs  file_result.rs  glob_result.rs  mod.rs  read_result.rs  shell.rs  symbol.rs
crates/aspect-aspector-core/: Cargo.toml
crates/aspect-aspector-core/src/: approval.rs  browser.rs  json_helpers.rs  lib.rs  parallel.rs  plan_quality.rs  registry.rs  response.rs  secrets.rs  subagent.rs  tool_names.rs  types.rs  usage.rs
crates/aspect-aspector-core/src/protocol/: mod.rs  request.rs  response.rs  tools.rs
crates/aspect-aspector-core/src/transport/: anthropic_acc.rs  auth.rs  completion.rs  diagnostic.rs  endpoints.rs  history.rs  inline_think.rs  mod.rs  models.rs  race.rs  reasoning.rs  retry.rs  sse.rs  stream_acc.rs  stream_feed.rs  stream_mode.rs  stream_types.rs  streaming.rs  types.rs
crates/aspect-aspector-core/src/turn/: constants.rs  env.rs
crates/aspect-bench/: Cargo.toml
crates/aspect-bench/src/: main.rs
crates/aspect-codegraph/: Cargo.toml
crates/aspect-codegraph/src/: cache.rs  community.rs  detect.rs  export.rs  graph.rs  index.rs  lang.rs  lib.rs  metrics.rs  parse.rs  query.rs  resolve.rs
crates/aspect-codegraph/src/export/: json.rs
crates/aspect-lsp/: Cargo.toml
crates/aspect-lsp/src/: discovery.rs  helpers.rs  lib.rs  manager.rs  session.rs  transport.rs  types.rs
crates/aspect-lsp/src/protocol/: init.rs  lifecycle.rs  mod.rs  requests.rs  uri.rs
crates/aspect-lsp/src/results/: common.rs  detail.rs  diag.rs  mod.rs  parse.rs  semantic.rs
crates/aspect-runtimes/: Cargo.toml
crates/aspect-runtimes/src/: archive.rs  command.rs  crypto.rs  error.rs  fs.rs  io.rs  lib.rs  platform.rs  resolve.rs
crates/aspect-runtimes/src/lsp/: github.rs  go.rs  manage.rs  mod.rs  npm.rs  pip.rs  recipes.rs  rustup.rs
crates/aspect-runtimes/src/runtime/: mod.rs  types.rs
crates/aspect-search/: Cargo.toml
crates/aspect-search/src/: classify.rs  filter.rs  glob.rs  graph.rs  lib.rs  matcher.rs  orchestrate.rs  path.rs  rank.rs  scoring.rs  tokenize.rs  types.rs
crates/aspect-settings/: Cargo.toml
crates/aspect-settings/src/: io.rs  keybindings.rs  lib.rs  store.rs
crates/lux-bench/: Cargo.toml
crates/lux-bench/src/: main.rs
crates/lux-core/: Cargo.toml
crates/lux-core/bindings/: DatabaseColumnPreview.ts  DatabaseTablePreview.ts  DebugAdapterInfo.ts  DebugEvaluateContext.ts  DebugExecutionAction.ts  DebugResolvedBreakpoint.ts  DebugScopeInfo.ts  DebugSourceBreakpoint.ts  DebugStackFrame.ts  DebugStackTrace.ts  DebugVariableInfo.ts  DocumentSnapshot.ts  ExtensionActivated.ts  ExtensionActivationFailed.ts  ExtensionCommandExecutionPhase.ts  ExtensionCommandExecutionStatus.ts  ExtensionCommandRoute.ts  ExtensionInfo.ts  ExtensionManifest.ts  ExtensionStatus.ts  ExtensionWasmPreflight.ts  FileInspection.ts  FileInspectionOptions.ts  FilePreview.ts  FileViewCategory.ts  FileViewDescriptor.ts  FileViewStrategy.ts  FsEntryKind.ts  GitDiff.ts  GitFileStatus.ts  LanguageServerInfo.ts  LanguageServerStatus.ts  LspCompletionItem.ts  LspInlayHint.ts  LspLocation.ts  LspRange.ts  LspSemanticTokens.ts  LspSignatureInformation.ts  LspTextEdit.ts  LspWorkspaceEditFile.ts  (+8 more)
crates/lux-core/src/: concurrency.rs  file_view.rs  lib.rs
crates/lux-file-intel/: Cargo.toml
crates/lux-file-intel/src/: archive_list.rs  database_edit.rs  delimited_edit.rs  lib.rs  office_extract.rs  spreadsheet_edit.rs
crates/lux-lsp/: Cargo.toml
crates/lux-lsp/src/: discovery.rs  lib.rs  protocol.rs  results.rs  transport.rs
crates/lux-settings/: Cargo.toml
crates/lux-settings/src/: lib.rs
(+945 files in other folders)
