[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/lux-core",
  "crates/lux-workspace",
  "crates/lux-fs",
  "crates/lux-editor",
  "crates/lux-search",
  "crates/lux-lsp",
  "crates/lux-dap",
  "crates/lux-terminal",
  "crates/lux-git",
  "crates/lux-settings",
  "crates/lux-extensions",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["Lux IDE Team"]

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ignore = "0.4"
lsp-types = "0.97"
notify = "8.0"
portable-pty = "0.9"
rayon = "1.10"
globset = "0.4"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.43", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
ts-rs = { version = "10.1", features = ["chrono-impl", "uuid-impl"] }
uuid = { version = "1.13", features = ["serde", "v4"] }
