[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/aspect-core",
  "crates/aspect-workspace",
  "crates/aspect-aspector-core",
  "crates/aspect-fs",
  "crates/aspect-file-intel",
  "crates/aspect-editor",
  "crates/aspect-search",
  "crates/aspect-lsp",
  "crates/aspect-codegraph",
  "crates/aspect-memory",
  "crates/aspect-skills",
  "crates/aspect-research",
  "crates/aspect-dap",
  "crates/aspect-terminal",
  "crates/aspect-ssh",
  "crates/aspect-git",
  "crates/aspect-settings",
  "crates/aspect-extensions",
  "crates/aspect-bench",
  "crates/aspect-agent-tools",
  "crates/aspect-mcp",
  "crates/aspect-runtimes",
  "crates/aspect-agent-browser",
  "crates/aspect-security",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["AspectIDE Team"]

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
calamine = "0.35.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.4.0"
dunce = "1"
encoding_rs = "0.8"
ignore = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp"] }
lsp-types = "0.97"
notify = "8.0"
portable-pty = "0.9"
pdf-extract = "0.10.0"
quick-xml = "0.40.1"
rayon = "1.10"
globset = "0.4"
regex = "1.11"
rusqlite = { version = "0.40.0", default-features = false, features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.43", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
ts-rs = { version = "10.1", features = ["chrono-impl", "uuid-impl"] }
uuid = { version = "1.13", features = ["serde", "v4"] }
umya-spreadsheet = "2.3.3"
wasmparser = "0.251.0"
wasmtime = { version = "45.0.0", default-features = false, features = ["cranelift", "runtime", "std"] }
zip = { version = "7.2.0", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1.1"
bzip2 = "0.6"
xz2 = "0.1"
cfb = "0.10"
spreadsheet-ods = "1.0"
icu_locale_core = "2.0"
