[package]
name = "aspect-agent-tools"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aspect-core = { path = "../aspect-core" }
aspect-editor = { path = "../aspect-editor" }
aspect-fs = { path = "../aspect-fs" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio = { workspace = true, features = ["fs", "process", "sync"] }
tracing.workspace = true
dunce.workspace = true
encoding_rs = "0.8"
globset.workspace = true
