[package]
name = "aspect-ai-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true
regex.workspace = true
chrono.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "native-tls-vendored", "stream"] }
futures-util = "0.3"

aspect-core = { path = "../aspect-core" }
aspect-ssh = { path = "../aspect-ssh" }
aspect-research = { path = "../aspect-research" }
