[package]
name = "aspect-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aspect-core = { path = "../aspect-core" }
aspect-fs = { path = "../aspect-fs" }
aspect-search = { path = "../aspect-search" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
