[package]
name = "aspect-runtimes"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aspect-core = { path = "../aspect-core" }
aspect-lsp = { path = "../aspect-lsp" }
dunce.workspace = true
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "native-tls-vendored", "stream"] }
serde.workspace = true
serde_json.workspace = true
zip.workspace = true
tar.workspace = true
flate2.workspace = true
tokio.workspace = true
tracing.workspace = true
which = "7.0"

[dev-dependencies]
uuid.workspace = true
