[package]
name = "aspect-settings"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
aspect-core = { path = "../aspect-core" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.27"
uuid.workspace = true
