[package]
name = "lux-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
lux-core = { path = "../lux-core" }
lux-fs = { path = "../lux-fs" }
lux-search = { path = "../lux-search" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
