[package]
name = "lux-file-intel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
calamine.workspace = true
chrono.workspace = true
csv.workspace = true
lux-core = { path = "../lux-core" }
pdf-extract.workspace = true
quick-xml.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
umya-spreadsheet.workspace = true
zip.workspace = true
tar.workspace = true
flate2.workspace = true
bzip2.workspace = true
xz2.workspace = true
cfb.workspace = true
spreadsheet-ods.workspace = true
icu_locale_core.workspace = true
