[package]
name = "lux-lsp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
lux-core = { path = "../lux-core" }
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
chrono.workspace = true
