[package]
name = "lux-settings"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
lux-core = { path = "../lux-core" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.27"
uuid.workspace = true
